--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       --brand-2: #f49503;
       --brand-3: #ffbd4b;
       --shadow: 0 10px 30px rgba(17, 29, 56, .15);
+      --err-bg:#fde7e7; --err-bd:#f9c5c0; --err-tx:#b43429;
+      --ok-bg:#e9f9ed; --ok-bd:#c3edcf; --ok-tx:#147a3d;
     }
 
-    /* ===== Base ===== */
     *{ box-sizing: border-box; }
     html,body{ height:100%; }
     body{
@@ -39,13 +40,9 @@
     img{ max-width:100%; display:block; }
     h1,h2,h3,p{ margin:0; }
 
-    .container{
-      max-width: 960px;
-      margin-inline: auto;
-      padding: 18px 14px 38px;
-    }
+    .container{ max-width: 960px; margin-inline: auto; padding: 18px 14px 38px; }
 
-    /* ===== Header ===== */
+    /* Header */
     .header{
       display:grid;
       grid-template-columns: 1fr auto;
@@ -53,11 +50,7 @@
       gap: var(--gap);
       margin-bottom: 18px;
     }
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:14px;
-    }
+    .brand{ display:flex; align-items:center; gap:14px; }
     .brand img{
       width:52px; height:52px; border-radius:12px;
       box-shadow: var(--shadow);
@@ -68,13 +61,11 @@
       line-height:1.1;
       letter-spacing:.2px;
     }
-    .cta{
-      justify-self:end;
-    }
+    .cta{ justify-self:end; }
+
     .btn{
       appearance: none;
-      border:0;
-      cursor:pointer;
+      border:0; cursor:pointer;
       padding: 16px 26px;
       border-radius: 16px;
       font-weight: 800;
@@ -88,150 +79,104 @@
     }
     .btn:active{ transform: translateY(1px) scale(.998); }
 
-    /* ===== Responsive grids ===== */
-    .two-col{
-      display:grid;
-      grid-template-columns: 1fr;   /* móvil: 1 col */
-      gap: var(--gap);
-    }
-    @media (min-width:520px){
-      .header{ grid-template-columns: 1fr auto; }
-      .two-col{ grid-template-columns: 1fr 1fr; } /* >=520px: 2 cols */
-    }
-    @media (max-width:520px){
-      .cta{ justify-self: stretch; } /* botón ancho completo en móvil */
-      .btn{ width:100%; }
-    }
+    /* Grids */
+    .two-col{ display:grid; grid-template-columns: 1fr; gap: var(--gap); }
+    @media (min-width:520px){ .two-col{ grid-template-columns: 1fr 1fr; } }
+    @media (max-width:520px){ .cta{ justify-self: stretch; } .btn{ width:100%; } }
 
-    /* ===== Cards / scores ===== */
-    .card{
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 18px;
-      width:100%;
-    }
-    .score-card h3{
-      font-size: 22px;
-      font-weight: 700;
-      color: var(--muted);
-      margin-bottom: 6px;
-    }
-    .score{
-      font-size: clamp(44px, 12vw, 84px);
-      font-weight: 800;
-      line-height: 1;
-      color: #0b1220;
-      letter-spacing: 1px;
-    }
+    /* Cards / scores */
+    .card{ background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); padding: 18px; width:100%; }
+    .score-card h3{ font-size: 22px; font-weight: 700; color: var(--muted); margin-bottom: 6px; }
+    .score{ font-size: clamp(44px, 12vw, 84px); font-weight: 800; line-height: 1; color: #0b1220; letter-spacing: 1px; }
 
-    /* ===== Input panel ===== */
-    .panel{
-      margin-top: 14px;
-      padding: 18px;
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
+    /* Panel de entrada */
+    .panel{ margin-top: 14px; padding: 18px; background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); }
     .inputs input{
-      width:100%;
-      min-width:0;
-      padding: 16px 18px;
-      border: 2px solid #f3b560;
-      outline: none;
-      border-radius: 14px;
-      font-size: 18px;
-      background: #fff;
-      color: var(--text);
+      width:100%; min-width:0; padding: 16px 18px;
+      border: 2px solid #f3b560; outline: none; border-radius: 14px;
+      font-size: 18px; background: #fff; color: var(--text);
     }
     .inputs input::placeholder{ color:#b6bfcc; }
-
-    /* Quitar flechas de number */
     input[type="number"]::-webkit-outer-spin-button,
-    input[type="number"]::-webkit-inner-spin-button{
-      -webkit-appearance: none; margin:0;
-    }
+    input[type="number"]::-webkit-inner-spin-button{ -webkit-appearance: none; margin:0; }
     input[type="number"]{ -moz-appearance: textfield; }
 
-    .primary{
+    .btn-split{
       margin-top: 14px;
-      width: 100%;
-      display:block;
-      text-align:center;
+      display:grid; gap: var(--gap);
+      grid-template-columns: 1fr;
     }
+    @media (min-width:420px){ .btn-split{ grid-template-columns: 1fr 1fr; } }
 
-    /* ===== Historial ===== */
-    .history{
-      margin-top: 14px;
-      padding: 18px;
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
+    /* Historial */
+    .history{ margin-top: 14px; padding: 18px; background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); }
     .history h3{ font-size: 22px; font-weight: 800; margin-bottom: 10px; }
-    .list{
-      display:flex; flex-direction:column; gap:10px;
-      max-height: 240px; overflow:auto; padding-right:4px;
-    }
+    .list{ display:flex; flex-direction:column; gap:10px; max-height: 260px; overflow:auto; padding-right:4px; }
     .item{
-      display:flex; align-items:center; justify-content:space-between;
-      gap:12px; padding:12px 14px;
-      border:1px solid #f0f0f0; border-radius:12px; background:#fff;
+      display:grid; grid-template-columns: 1fr auto auto; align-items:center; gap:10px;
+      padding:12px 14px; border:1px solid #f0f0f0; border-radius:12px; background:#fff;
     }
-    .item b{ font-weight:800; }
+    .who{ font-weight:800; }
+    .when{ color:#8a96a8; font-size:12px; }
     .badge{
       padding:6px 10px; border-radius:999px;
       background:linear-gradient(180deg, var(--brand-3), var(--brand-2));
-      font-weight:800; font-size:14px; color:#1a202c;
+      font-weight:800; font-size:14px; color:#1a202c; justify-self:end; white-space:nowrap;
       box-shadow: inset 0 1px 0 rgba(255,255,255,.6);
-      white-space:nowrap;
     }
+    .del{
+      appearance:none; border:0; background:#fff; color:#c02c2c;
+      font-weight:800; font-size:16px; cursor:pointer; padding:8px 10px; border-radius:10px;
+      border:1px solid #f0d5d5; justify-self:end;
+    }
+    .del:active{ transform: translateY(1px); }
 
-    /* ===== Mensaje/alerta pequeña ===== */
-    .msg{
-      margin-top: 10px;
-      color: #b43429;
-      background: #fde7e7;
-      border: 1px solid #f9c5c0;
-      padding: 10px 12px;
-      border-radius: 10px;
-      display:none;
-      font-size: 14px;
-      font-weight:600;
-    }
-    .msg.show{ display:block; }
+    .foot{ margin: 22px auto 0; text-align:center; color:#99a3b2; font-size:14px; }
 
-    /* ===== Footer pequeño ===== */
-    .foot{
-      margin: 22px auto 0; text-align:center; color:#99a3b2;
-      font-size:14px;
-    }
-
-    /* ===== Splash (intro 2s) ===== */
-    #splash{
-      position:fixed; inset:0; background:#fff;
-      display:flex; align-items:center; justify-content:center;
-      z-index: 9999;
-      transition: opacity .4s ease, visibility .4s ease;
-    }
+    /* Splash */
+    #splash{ position:fixed; inset:0; background:#fff; display:flex; align-items:center; justify-content:center; z-index:9999; transition: opacity .4s ease, visibility .4s ease; }
     #splash.hide{ opacity:0; visibility:hidden; pointer-events:none; }
-    .splash-card{
-      width:120px; height:120px; border-radius:26px;
-      display:grid; place-items:center;
-      background: #fff;
-      box-shadow: 0 25px 70px rgba(0,0,0,.12), inset 0 1px 0 #fff;
-    }
+    .splash-card{ width:120px; height:120px; border-radius:26px; display:grid; place-items:center; background: #fff; box-shadow: 0 25px 70px rgba(0,0,0,.12), inset 0 1px 0 #fff; }
     .splash-card img{ width:90px; height:90px; }
+
+    /* Toast (mensajes) */
+    .toast{
+      position: fixed; left: 50%; bottom: 16px; transform: translateX(-50%);
+      z-index: 9999; padding: 12px 14px; border-radius: 10px; font-weight: 700; font-size: 14px;
+      border:1px solid; display:none; box-shadow: 0 8px 20px rgba(0,0,0,.12), inset 0 1px 0 #fff;
+    }
+    .toast.show{ display:block; }
+    .toast.err{ background: var(--err-bg); border-color: var(--err-bd); color: var(--err-tx); }
+    .toast.ok{ background: var(--ok-bg); border-color: var(--ok-bd); color: var(--ok-tx); }
+
+    /* Modal ganador */
+    .modal{
+      position: fixed; inset: 0; display: none; place-items: center;
+      background: rgba(12,20,33,.45); backdrop-filter: blur(4px); z-index: 9998;
+      padding: 18px;
+    }
+    .modal.show{ display: grid; }
+    .modal-box{
+      width: min(520px, 100%);
+      background: #fff; border-radius: 22px; padding: 22px; box-shadow: 0 20px 60px rgba(0,0,0,.25);
+      text-align: center;
+    }
+    .modal-title{ font-size: clamp(22px, 5.5vw, 28px); font-weight: 800; margin-bottom: 8px; }
+    .modal-sub{ color:#667389; margin-bottom: 14px; }
+    .modal-actions{
+      margin-top: 12px; display: grid; gap: 10px; grid-template-columns: 1fr 1fr;
+    }
+    .btn-ghost{
+      appearance: none; border:1px solid #e6e9ef; background:#fff; color:#0b1220;
+      padding: 14px 20px; border-radius: 14px; font-weight: 800; cursor:pointer;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Splash de 2 segundos -->
+  <!-- Splash 2s -->
   <div id="splash" aria-hidden="true">
-    <div class="splash-card">
-      <!-- usa tu logo.svg del repo -->
-      <img src="logo.svg" alt="LD logo">
-    </div>
+    <div class="splash-card"><img src="logo.svg" alt="LD logo"></div>
   </div>
 
   <main class="container">
@@ -241,9 +186,7 @@
         <img src="logo.svg" alt="LD logo" width="52" height="52">
         <h1>Liguita de Dominó</h1>
       </div>
-      <div class="cta">
-        <button class="btn" id="btnNuevo">Nuevo Juego</button>
-      </div>
+      <div class="cta"><button class="btn" id="btnNuevo">Nuevo Juego</button></div>
     </header>
 
     <!-- Scores -->
@@ -258,123 +201,159 @@
       </div>
     </section>
 
-    <!-- Panel de inputs y sumar -->
+    <!-- Panel: un solo input y dos botones -->
     <section class="panel">
-      <div class="two-col inputs" style="align-items:center;">
-        <input id="p1" type="number" inputmode="numeric" placeholder="Puntos equipo 1" min="0">
-        <input id="p2" type="number" inputmode="numeric" placeholder="Puntos equipo 2" min="0">
+      <div class="inputs">
+        <input id="pts" type="number" inputmode="numeric" placeholder="Puntos de la mano" min="0">
       </div>
-      <button class="btn primary" id="btnSumar">Sumar mano</button>
-      <div id="msg" class="msg"></div>
+      <div class="btn-split">
+        <button class="btn" id="btnEq1">Equipo 1</button>
+        <button class="btn" id="btnEq2">Equipo 2</button>
+      </div>
     </section>
 
     <!-- Historial -->
     <section class="history">
       <h3>Historial</h3>
-      <div id="hist" class="list" aria-live="polite" aria-relevant="additions"></div>
+      <div id="hist" class="list" aria-live="polite" aria-relevant="additions removals"></div>
     </section>
 
     <div class="foot">Liguita chilling — By Manuel Olivares</div>
   </main>
 
+  <!-- Modal ganador -->
+  <div id="winnerModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="winTitle">
+    <div class="modal-box">
+      <div class="modal-title" id="winTitle">¡Ganó Equipo <span id="winTeam">1</span>! 🏆</div>
+      <div class="modal-sub">Llegó a <b id="winScore">200</b> puntos.</div>
+      <div class="modal-actions">
+        <button id="winClose" class="btn-ghost">Cerrar</button>
+        <button id="winRestart" class="btn">Nuevo juego</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Toast -->
+  <div id="toast" class="toast"></div>
+
   <script>
-    // ===== Util =====
     const $ = s => document.querySelector(s);
 
-    // Estado con persistencia
-    const state = {
-      s1: 0,
-      s2: 0,
-      hist: [] // [{team:1|2, pts:number, t:number}]
-    };
+    // ===== Config =====
+    const WIN = 200; // umbral para ganar
 
+    // ===== Estado con persistencia =====
+    const state = { s1:0, s2:0, hist:[] }; // hist: [{id,team,pts,t}]
     const load = () => {
       try{
         const saved = JSON.parse(localStorage.getItem('ld_state'));
         if(saved){
           state.s1 = saved.s1|0;
           state.s2 = saved.s2|0;
-          state.hist = Array.isArray(saved.hist) ? saved.hist : [];
+          state.hist = Array.isArray(saved.hist)? saved.hist : [];
         }
       }catch(e){}
     };
     const save = () => localStorage.setItem('ld_state', JSON.stringify(state));
-
     const fmt = n => n.toLocaleString('es-DO');
 
-    const render = () => {
+    // ===== Render =====
+    function render(){
       $('#s1').textContent = fmt(state.s1);
       $('#s2').textContent = fmt(state.s2);
+
       const hist = $('#hist');
       hist.innerHTML = '';
       state.hist.slice().reverse().forEach(h => {
-        const item = document.createElement('div');
-        item.className = 'item';
-        const who = h.team === 1 ? 'Equipo 1' : 'Equipo 2';
-        const when = new Date(h.t).toLocaleTimeString('es-DO', {hour:'2-digit', minute:'2-digit'});
-        item.innerHTML = `
-          <div><b>${who}</b><div style="color:#8a96a8; font-size:12px">${when}</div></div>
+        const li = document.createElement('div');
+        li.className = 'item';
+        li.innerHTML = `
+          <div>
+            <div class="who">${h.team===1?'Equipo 1':'Equipo 2'}</div>
+            <div class="when">${new Date(h.t).toLocaleTimeString('es-DO',{hour:'2-digit',minute:'2-digit'})}</div>
+          </div>
           <div class="badge">+${fmt(h.pts)}</div>
+          <button class="del" data-id="${h.id}" title="Borrar">🗑️</button>
         `;
-        hist.appendChild(item);
+        hist.appendChild(li);
       });
-    };
+    }
 
-    const showMsg = (txt) => {
-      const m = $('#msg');
-      m.textContent = txt;
-      m.classList.add('show');
-      setTimeout(()=> m.classList.remove('show'), 2500);
-    };
+    // ===== Toast =====
+    function toast(txt, type='ok'){
+      const el = $('#toast');
+      el.textContent = txt;
+      el.className = `toast show ${type}`;
+      clearTimeout(el._t);
+      el._t = setTimeout(()=> el.className='toast', 2000);
+    }
 
-    // Sumar mano
-    const sumar = () => {
-      const v1 = parseInt($('#p1').value,10) || 0;
-      const v2 = parseInt($('#p2').value,10) || 0;
+    // ===== Modal ganador =====
+    function showWinner(team, score){
+      $('#winTeam').textContent = team;
+      $('#winScore').textContent = fmt(score);
+      $('#winnerModal').classList.add('show');
+    }
+    function hideWinner(){ $('#winnerModal').classList.remove('show'); }
 
-      if ((v1<=0 && v2<=0) || (v1>0 && v2>0)){
-        showMsg('Ingresa puntos para un solo equipo (y mayor que 0).');
-        return;
-      }
+    // ===== Lógica =====
+    function addTo(team){
+      const v = parseInt($('#pts').value,10);
+      if(!v || v<=0){ toast('Escribe puntos mayores a 0', 'err'); return; }
 
-      if (v1>0){
-        state.s1 += v1;
-        state.hist.push({team:1, pts:v1, t:Date.now()});
-      } else if (v2>0){
-        state.s2 += v2;
-        state.hist.push({team:2, pts:v2, t:Date.now()});
-      }
-      $('#p1').value = '';
-      $('#p2').value = '';
+      const prev1 = state.s1, prev2 = state.s2;
+
+      if(team===1){ state.s1 += v; } else { state.s2 += v; }
+      state.hist.push({ id: Date.now().toString()+Math.random().toString(36).slice(2), team, pts: v, t: Date.now() });
+      $('#pts').value = '';
       save(); render();
-    };
+      toast(`+${v} al Equipo ${team}`, 'ok');
+
+      // comprobar ganador sólo si cruzó el umbral ahora
+      if(team===1 && prev1 < WIN && state.s1 >= WIN) showWinner(1, state.s1);
+      if(team===2 && prev2 < WIN && state.s2 >= WIN) showWinner(2, state.s2);
+    }
+
+    // Borrar del historial (delegación)
+    $('#hist').addEventListener('click', (e)=>{
+      const btn = e.target.closest('.del');
+      if(!btn) return;
+      const id = btn.dataset.id;
+      const idx = state.hist.findIndex(h => h.id===id);
+      if(idx===-1) return;
+      const h = state.hist[idx];
+
+      if(h.team===1){ state.s1 = Math.max(0, state.s1 - h.pts); }
+      else { state.s2 = Math.max(0, state.s2 - h.pts); }
+
+      state.hist.splice(idx,1);
+      save(); render();
+      toast(`Quitado +${h.pts} del Equipo ${h.team}`, 'ok');
+    });
 
     // Nuevo juego
-    const nuevo = () => {
-      if (state.s1===0 && state.s2===0 && state.hist.length===0){
-        return;
-      }
+    function nuevo(){
+      if (state.s1===0 && state.s2===0 && state.hist.length===0) return;
       const ok = confirm('¿Empezar un juego nuevo? Se borrará el marcador y el historial.');
       if(!ok) return;
-      state.s1 = 0; state.s2 = 0; state.hist = [];
-      save(); render();
-    };
+      state.s1=0; state.s2=0; state.hist=[];
+      save(); render(); hideWinner();
+    }
 
     // Eventos
-    $('#btnSumar').addEventListener('click', sumar);
+    $('#btnEq1').addEventListener('click', ()=> addTo(1));
+    $('#btnEq2').addEventListener('click', ()=> addTo(2));
     $('#btnNuevo').addEventListener('click', nuevo);
+    $('#pts').addEventListener('keydown', e=>{ if(e.key==='Enter') addTo(1); }); // Enter rápido suma a Eq1
 
-    // Enter desde inputs
-    $('#p1').addEventListener('keydown', e => { if(e.key==='Enter') sumar(); });
-    $('#p2').addEventListener('keydown', e => { if(e.key==='Enter') sumar(); });
+    // Modal eventos
+    $('#winClose').addEventListener('click', hideWinner);
+    $('#winRestart').addEventListener('click', nuevo);
+    $('#winnerModal').addEventListener('click', (e)=>{ if(e.target.id==='winnerModal') hideWinner(); });
 
-    // Cargar estado
+    // Init
     load(); render();
-
-    // Ocultar splash en 2s
-    window.addEventListener('load', () => {
-      setTimeout(() => { document.getElementById('splash').classList.add('hide'); }, 2000);
-    });
+    window.addEventListener('load', ()=> setTimeout(()=> $('#splash').classList.add('hide'), 2000));
   </script>
 </body>
 </html>
